# titans

./: .cursorrules  .gitignore  README.md  check_tokenizer_alignment.py  compare_with_teacher_model.py  distil.py  export_llama_model.py  export_mac_model.py  export_model.py  inspect_state_dict.py  inspect_training_examples.py  inspect_weights.py  model.py  no_vllm_inference.py  package_model.py  prepare_for_vllm.py  pyproject.toml  quantize.py  state_dict_analysis.json  testmodel.py  train.py  verify_export_process.py  verify_model_architecture.py  vllm_inference.py
models/: gemini_gradient.py  inference_memory_wrapper.py  llama_titans.py  paper_memory.py  vllm_mac_model.py
models/hf_llama/: modeling_flax_llama.py  modeling_llama.py
