[tool.poetry]
name = "titans"
version = "0.1.0"
description = ""
authors = ["Fonz <fonz@botverse.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.3.0%2Bcu121-cp312-cp312-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.18.0%2Bcu121-cp312-cp312-linux_x86_64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.3.0%2Bcu121-cp312-cp312-linux_x86_64.whl" }
datasets = "^3.2.0"
transformers = "^4.48.0"
fairscale = "^0.4.13"
tiktoken = "^0.9.0"
accelerate = "^1.4.0"
wandb = "^0.19.7"
tensorboard = "^2.19.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
